fixed margin spacing with image

--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -29,6 +29,7 @@
     color: #594FD1;
     font-size: 13px;
     margin-top: 7px;
+    font-weight: normal;
 }
 
 .header {
